examples/tfb/envoy.yaml
# TODO: Check this, where applicable copy back to other example files
# Used the following examples to try and improve performance here
# <https://www.envoyproxy.io/docs/envoy/latest/configuration/best_practices/edge>
# <https://www.envoyproxy.io/docs/envoy/latest/faq/performance/how_to_benchmark_envoy>
# overload_manager:
#   refresh_interval: 0.25s
#   resource_monitors:
#     - name: "envoy.resource_monitors.fixed_heap"
#       typed_config:
#         "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
#         max_heap_size_bytes: 2147483648 # 2 GiB
#     actions:
#     - name: "envoy.overload_actions.shrink_heap"
#       triggers:
#       - name: "envoy.resource_monitors.fixed_heap"
#         threshold:
#           value: 0.95
#     - name: "envoy.overload_actions.stop_accepting_requests"
#       triggers:
#       - name: "envoy.resource_monitors.fixed_heap"
#         threshold:
#           value: 0.98

static_resources:
  listeners:
    - name: listener1
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      # per_connection_buffer_limit_bytes: 32768 # 32 KiB
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: grpc_json
                use_remote_address: true
                # generate_request_id: false
                # http2_protocol_options:
                #   max_concurrent_streams: 100
                #   initial_stream_window_size: 65536 # 64 KiB
                #   initial_connection_window_size: 1048576 # 1 MiB
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: upstream
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: upstream-service
                            timeout: { seconds: 60 }
                http_filters:
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/data/api.pb"
                      services:
                        - "grpc.health.v1.Health"
                        - "api.Example"
                        - "api.Petshop"
                        - "api.Tfb"
                      match_incoming_request_route: true
                      convert_grpc_status: true
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                      request_validation_options:
                        reject_unknown_method: true
                        reject_unknown_query_parameters: true
                  - name: envoy.filters.http.router
                    # disable dynamic stats?

  clusters:
    - name: upstream-service
      connect_timeout: 10s
      # per_connection_buffer_limit_bytes: 32768 # 32 KiB
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 1000000000
            max_pending_requests: 1000000000
            max_requests: 1000000000
            max_retries: 1000000000
          - priority: HIGH
            max_connections: 1000000000
            max_pending_requests: 1000000000
            max_requests: 1000000000
            max_retries: 1000000000
      type: strict_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
              # initial_stream_window_size: 65536 # 64 KiB
              # initial_connection_window_size: 1048576 # 1 MiB
      load_assignment:
        cluster_name: upstream-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: server1
                      port_value: 5000
            # - endpoint:
            #     address:
            #       socket_address:
            #         address: server2
            #         port_value: 5001

# layered_runtime:
#   layers:
#     - name: static_layer_0
#       static_layer:
#         envoy:
#           resource_limits:
#             listener:
#               listener1:
#                 connection_limit: 10000
#         overload:
#           global_downstream_max_connections: 50000
